# prr-pressure-cooker

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  prr-pressure-cooker-prd.md  pyproject.toml
docs/: koyeb.md
plans/: koyeb-mistral-gap-closure-plan.md  prr-pressure-cooker-mvp-plan.md  short-lived-step-workflows-plan.md
src/prr_pressure_cooker/: __init__.py  adapters.py  cli.py  config.py  drafts.py  ids.py  ingest.py  models.py  rules.py  service.py  storage.py  worker.py  workflow_runtime.py
src/prr_pressure_cooker/workflows/: __init__.py  router.py
tests/: test_casefile_indexes.py  test_cli_flow.py  test_deploy_command.py  test_eml_parsing.py  test_guardrails.py  test_ingest_normalization.py  test_packets.py  test_reroute.py  test_rules.py  test_workflow_gap.py  test_workflow_runtime.py
tests/fixtures/: custodian_dodge.txt  defective_estimate.txt  no_action.txt  opaque_fee_estimate.txt  portal_event.json
