[project]
name = "prr-pressure-cooker"
version = "0.1.0"
description = "Mistral Workflows-first pressure ladder for public records request escalation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mistralai-workflows[mistralai]>=3.0.0,<4",
    "pydantic>=2.11",
    "pyyaml>=6.0.2",
]

[project.scripts]
prr = "prr_pressure_cooker.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
